--- a/be-springboot-onlineshop/src/main/resources/Order.jrxml
+++ b/be-springboot-onlineshop/src/main/resources/Order.jrxml
@@ -21,10 +21,10 @@
     <title>
         <band height="72">
             <frame>
-                <reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="0f0897af-d3b8-477c-b919-f5da8152288e"/>
+                <reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#004466" uuid="0f0897af-d3b8-477c-b919-f5da8152288e"/>
                 <staticText>
-                    <reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="d7230ccc-cc8b-4de9-afd4-6c74d5b94f41"/>
-                    <textElement>
+                    <reportElement x="170" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="d7230ccc-cc8b-4de9-afd4-6c74d5b94f41"/>
+                    <textElement textAlignment="Center">
                         <font size="34" isBold="true"/>
                     </textElement>
                     <text><![CDATA[Order]]></text>
@@ -34,7 +34,7 @@
                     <textElement textAlignment="Right">
                         <font size="14"/>
                     </textElement>
-                    <text><![CDATA[Transaction order history]]></text>
+                    <text><![CDATA[Transaction Order History]]></text>
                 </staticText>
             </frame>
         </band>
@@ -47,52 +47,52 @@
     <columnHeader>
         <band height="21">
             <line>
-                <reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="1b4816cb-176e-4222-847f-dfb3a402b377"/>
+                <reportElement x="-20" y="20" width="595" height="1" forecolor="#333333" uuid="1b4816cb-176e-4222-847f-dfb3a402b377"/>
             </line>
             <staticText>
-                <reportElement mode="Opaque" x="0" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="a891690c-810e-403d-bdd6-169a93be76a8"/>
+                <reportElement mode="Opaque" x="0" y="0" width="35" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="a891690c-810e-403d-bdd6-169a93be76a8"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[ID]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="79" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="657caec9-a3a2-4f24-b4d2-aa9feceb92d1"/>
+                <reportElement mode="Opaque" x="35" y="0" width="79" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="657caec9-a3a2-4f24-b4d2-aa9feceb92d1"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Code]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="158" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="4b4c9275-c2c6-417f-9b0e-725c07486b23"/>
+                <reportElement mode="Opaque" x="114" y="0" width="123" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="4b4c9275-c2c6-417f-9b0e-725c07486b23"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Date]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="237" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="3d0b0934-9ede-42e0-bc48-63581fc6077d"/>
+                <reportElement mode="Opaque" x="237" y="0" width="79" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="3d0b0934-9ede-42e0-bc48-63581fc6077d"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Quantity]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="316" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="8b7b31bf-a734-461f-a5d8-6889f3881f2a"/>
+                <reportElement mode="Opaque" x="316" y="0" width="79" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="8b7b31bf-a734-461f-a5d8-6889f3881f2a"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Total Price]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="395" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="614399ed-fcb8-4fbb-8b88-2c2cfb830524"/>
+                <reportElement mode="Opaque" x="395" y="0" width="79" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="614399ed-fcb8-4fbb-8b88-2c2cfb830524"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Customer]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="474" y="0" width="79" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="b5d37eaf-97bd-4ba7-bd67-32faa46e54a8"/>
+                <reportElement mode="Opaque" x="474" y="0" width="79" height="20" forecolor="#004466" backcolor="#CCCCCC" uuid="b5d37eaf-97bd-4ba7-bd67-32faa46e54a8"/>
                 <textElement textAlignment="Center">
                     <font size="12" isBold="true"/>
                 </textElement>
@@ -107,19 +107,19 @@
                 <reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="05c48b2e-26a5-4f05-92ff-ba06c0bc6568"/>
             </line>
             <textField isStretchWithOverflow="true">
-                <reportElement x="0" y="0" width="79" height="20" uuid="4cf0c196-3d9a-46d5-bf49-1193fc880fbb"/>
+                <reportElement x="0" y="0" width="35" height="20" uuid="4cf0c196-3d9a-46d5-bf49-1193fc880fbb"/>
                 <textFieldExpression><![CDATA[$F{orderId}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement x="79" y="0" width="79" height="20" uuid="fc22d04c-7f64-4e68-aee6-2bb289328e69"/>
+                <reportElement x="35" y="0" width="79" height="20" uuid="fc22d04c-7f64-4e68-aee6-2bb289328e69"/>
                 <textFieldExpression><![CDATA[$F{orderCode}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement x="158" y="0" width="79" height="20" uuid="e85f979b-8ff2-40d3-8242-15978f1694a6"/>
-                <textFieldExpression><![CDATA[$F{orderDate}]]></textFieldExpression>
+                <reportElement x="120" y="0" width="115" height="20" uuid="e85f979b-8ff2-40d3-8242-15978f1694a6"/>
+                <textFieldExpression><![CDATA[new SimpleDateFormat("MMMM d, y, h:mm a").format($F{orderDate})]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement x="237" y="0" width="79" height="20" uuid="c242ce2c-3364-4824-8be5-33b429ad7f65"/>
+                <reportElement x="250" y="0" width="70" height="20" uuid="c242ce2c-3364-4824-8be5-33b429ad7f65"/>
                 <textFieldExpression><![CDATA[$F{quantity}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
@@ -127,11 +127,11 @@
                 <textFieldExpression><![CDATA[$F{totalPrice}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement x="395" y="0" width="79" height="20" uuid="53e8bc04-7456-4f8d-b72e-babbdab136da"/>
+                <reportElement x="395" y="0" width="90" height="20" uuid="53e8bc04-7456-4f8d-b72e-babbdab136da"/>
                 <textFieldExpression><![CDATA[$F{customers.customerName}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement x="474" y="0" width="79" height="20" uuid="1272da56-8396-4441-9f7e-d08f76f00399"/>
+                <reportElement x="490" y="0" width="70" height="20" uuid="1272da56-8396-4441-9f7e-d08f76f00399"/>
                 <textFieldExpression><![CDATA[$F{items.itemName}]]></textFieldExpression>
             </textField>
         </band>
