--- a/fe-angular-onlineshop/src/app/pages/customer/detail-customer/detail-customer.component.html
+++ b/fe-angular-onlineshop/src/app/pages/customer/detail-customer/detail-customer.component.html
@@ -4,17 +4,25 @@
     >Detail Customer</label
   >
   <div
-    class="max-w-[28rem] p-8 mx-auto mt-10 mb-10 bg-white rounded-2xl shadow-xl"
+    class="max-w-[20rem] tablet:max-w-[28rem] p-6 laptop:p-8 mx-auto mt-10 mb-10 bg-white rounded-2xl shadow-xl"
   >
-    <div class="flex flex-col">
-      <div class="mt-4 mb-2">
-        <img *ngIf="customer.pic" [src]="customer.pic" alt="Customer Picture" />
+    <div class="flex flex-col text-sm laptop:text-base">
+      <div class="flex justify-center mt-4 mb-2">
+        <img
+          *ngIf="customer.pic"
+          class="rounded-md"
+          [src]="customer.pic"
+          alt="Customer Picture"
+        />
       </div>
       <p><strong>ID:</strong> {{ customer.customerId }}</p>
       <p><strong>Name:</strong> {{ customer.customerName }}</p>
       <p><strong>Code:</strong> {{ customer.customerCode }}</p>
       <p><strong>Phone:</strong> {{ customer.customerPhone }}</p>
-      <p><strong>Last Order Date:</strong> {{ customer.lastOrderDate }}</p>
+      <p>
+        <strong>Last Order Date:</strong>
+        {{ customer.lastOrderDate | date: 'MMMM d, y, h:mm a' }}
+      </p>
       <div class="flex justify-end mt-4">
         <button
           class="p-2 px-4 text-white rounded-md bg-cyan-600 hover:bg-cyan-500"
