--- a/fe-angular-onlineshop/src/app/pages/item/detail-item/detail-item.component.html
+++ b/fe-angular-onlineshop/src/app/pages/item/detail-item/detail-item.component.html
@@ -14,7 +14,10 @@
       <p><strong>Name:</strong> {{ item.itemName }}</p>
       <p><strong>Code:</strong> {{ item.itemCode }}</p>
       <p><strong>Stock:</strong> {{ item.stock }}</p>
-      <p><strong>Last Re-Stock:</strong> {{ item.lastReStock }}</p>
+      <p>
+        <strong>Last Re-Stock:</strong>
+        {{ item.lastReStock | date: 'MMMM d, y, h:mm a' }}
+      </p>
       <div class="flex justify-end mt-4">
         <button
           class="p-2 px-4 text-white rounded-md bg-cyan-600 hover:bg-cyan-500"
@@ -27,6 +30,6 @@
   </div>
 
   <div *ngIf="!item">
-    <p>No customer details available.</p>
+    <p>No item details available.</p>
   </div>
 </div>
