--- a/fe-angular-onlineshop/src/app/pages/home/home.component.html
+++ b/fe-angular-onlineshop/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
-<div class="min-h-screen bg-cyan-50" *ngIf="customers.length > 0">
+
+<div class="min-h-screen  bg-cyan-50" *ngIf="customers.length > 0">
   <app-navbar></app-navbar>
   <label class="flex justify-center mt-10 mb-10 text-xl font-extrabold"
     >Data Customer</label
   >
-  <div class="p-10 mx-16 bg-white rounded-md shadow-md laptop:mx-44">
+  <div class="p-10 mx-16 bg-white mb-10 rounded-md shadow-md laptop:mx-44">
     <div class="flex justify-between mb-5">
       <input
         type="text"
@@ -42,7 +43,6 @@
               <th class="p-2 border-b">Customer Code</th>
               <th class="p-2 border-b">Active</th>
               <th class="p-2 border-b">Last Order Date</th>
-
               <th class="p-2 border-b">Actions</th>
             </tr>
           </thead>
@@ -111,9 +111,23 @@
         </table>
       </div>
       <div
-        class="flex justify-end mt-4 text-xs text-white tablet:text-sm laptop:text-base"
+        class="flex justify-between mt-4 text-xs text-white tablet:text-sm laptop:text-base"
       >
-        <button
+      <div class="text-black">
+        <label for="pageSize" class="mr-2">Entries:</label>
+        <select
+          class="p-2 border rounded"
+          [(ngModel)]="pageSize"
+          (change)="pageSizeCustomers()"
+          defaultValue="4"
+        >
+          <option value="4">4</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+        </select>
+      </div>
+        <div>
+          <button
           [disabled]="currentPage === 1"
           (click)="onPageChange(currentPage - 1)"
           class="p-2 border rounded bg-cyan-600 hover:bg-cyan-500"
@@ -130,9 +144,11 @@
         >
           Next
         </button>
+        </div>
       </div>
     </div>
   </div>
+  <div class="p-3"></div>
 </div>
 
 <!-- Modal Konfirmasi Hapus -->
@@ -162,3 +178,4 @@
     </div>
   </div>
 </div>
+
