--- a/fe-angular-onlineshop/src/app/pages/order/pages-order/pages-order.component.html
+++ b/fe-angular-onlineshop/src/app/pages/order/pages-order/pages-order.component.html
@@ -3,7 +3,7 @@
   <label class="flex justify-center mt-10 mb-10 text-xl font-extrabold"
     >Data Order</label
   >
-  <div class="p-10 mx-16 bg-white rounded-md shadow-md laptop:mx-44">
+  <div class="p-10 mx-16 bg-white mb-10 rounded-md shadow-md laptop:mx-44">
     <div class="flex justify-between mb-5">
       <input
         type="text"
@@ -92,26 +92,41 @@
       </div>
     </div>
     <div
-      class="flex justify-end mt-4 text-xs text-white tablet:text-sm laptop:text-base"
-    >
-      <button
-        [disabled]="currentPage === 1"
-        (click)="onPageChange(currentPage - 1)"
-        class="p-2 border rounded bg-cyan-600 hover:bg-cyan-500"
+        class="flex justify-between mt-4 text-xs text-white tablet:text-sm laptop:text-base"
       >
-        Previous
-      </button>
-      <span class="mx-2 mt-2 text-black"
-        >{{ currentPage }} / {{ totalPages }}</span
-      >
-      <button
-        [disabled]="currentPage === totalPages"
-        (click)="onPageChange(currentPage + 1)"
-        class="p-2 border rounded-md bg-cyan-600 hover:bg-cyan-500"
-      >
-        Next
-      </button>
-    </div>
+      <div class="text-black">
+        <label for="pageSize" class="mr-2">Entries:</label>
+        <select
+          class="p-2 border rounded"
+          [(ngModel)]="pageSize"
+          (change)="pageSizeOrders()"
+          defaultValue="7"
+        >
+          <option value="7">7</option>
+          <option value="15">15</option>
+          <option value="30">30</option>
+        </select>
+      </div>
+        <div>
+          <button
+          [disabled]="currentPage === 1"
+          (click)="onPageChange(currentPage - 1)"
+          class="p-2 border rounded bg-cyan-600 hover:bg-cyan-500"
+        >
+          Previous
+        </button>
+        <span class="mx-2 mt-2 text-black"
+          >{{ currentPage }} / {{ totalPages }}</span
+        >
+        <button
+          [disabled]="currentPage === totalPages"
+          (click)="onPageChange(currentPage + 1)"
+          class="p-2 border rounded-md bg-cyan-600 hover:bg-cyan-500"
+        >
+          Next
+        </button>
+        </div>
+      </div>
   </div>
   <div class="mt-8 ml-16 laptop:ml-44">
     <a
@@ -121,6 +136,7 @@
       <fa-icon [icon]="faFileAlt" class="pr-2"></fa-icon>Report Order
     </a>
   </div>
+  <div class="p-5"></div>
 </div>
 <!-- Modal Konfirmasi Hapus -->
 <div
@@ -148,4 +164,5 @@
       </button>
     </div>
   </div>
+  
 </div>
